Changing css file

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 /*************************************
-** Author: Mofid Ansari (ansarimofid)
-** Website: http://ansarimofid.in
-** Email: ansarimofid@gmail.com
+** Author: Sourodeep Chakraborty (Web developer)
+** Email: chakrabortysourodeep16@gmail.com
 **************************************/
 
 /*Primary Color:rgb(15,108,107)*/
